//
//Copyright (c) 2017 Kloudless Inc. All rights reserved.
//Kloudless PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
//

group 'com.kloudless'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.7

repositories {
  mavenCentral()
  maven {
    url "http://repo.spring.io/release"
  }
}

dependencies {
  compile('org.springframework:spring-core:4.3.9.RELEASE') {
    exclude group: 'commons-logging'
    exclude module: 'commons-logging'
  }
  compile 'org.springframework:spring-beans:4.3.9.RELEASE'
  compile 'org.springframework:spring-context:4.3.9.RELEASE'
  compile 'org.springframework:spring-web:4.3.9.RELEASE'

  compile 'org.slf4j:jcl-over-slf4j:1.7.25'
  compile 'ch.qos.logback:logback-classic:1.2.3'

  compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
  compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.8.9'
  compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.0'


  compile 'com.google.guava:guava:22.0'

  testCompile 'junit:junit:4.12'
  testCompile 'org.assertj:assertj-core:2.8.0'
  testCompile 'org.testng:testng:6.11'
  testCompile 'org.mockito:mockito-core:2.8.47'
}

test {
  useTestNG(){
    suites 'src/test/resources/test.xml'
  }
  testLogging.showStandardStreams = true
  minHeapSize = "128m"
  maxHeapSize = "512m"
  jvmArgs '-XX:MaxPermSize=256m'

}
